# mycobot_ros2_ws

./: .gitignore  README.md
src/mycobot_kinematics/mycobot_kinematics/: fk_node.py  ik_control_node.py  ik_internal_node.py
src/mycobot_ros2/arm_gazebo/: CMakeLists.txt  package.xml
src/mycobot_ros2/arm_gazebo/config/: ros2_controllers.yaml
src/mycobot_ros2/arm_gazebo/launch/: spawn_arm_gazebo.launch.py
src/mycobot_ros2/arm_gazebo/urdf/: my_arm_gazebo.urdf.xacro  mycobot_280.urdf.xacro
src/mycobot_ros2/arm_moveit_config/: .setup_assistant  package.xml
src/mycobot_ros2/arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  mycobot_280.ros2_control.xacro  mycobot_280.srdf  mycobot_280.urdf.xacro  ros2_controllers.yaml
src/mycobot_ros2/arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_gazebo.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/mycobot_ros2/mycobot_bringup/: package.xml
src/mycobot_ros2/mycobot_bringup/scripts/: mycobot_280_gazebo.sh  mycobot_280_gazebo_and_moveit.sh
src/mycobot_ros2/mycobot_description/: CMakeLists.txt  README.md  package.xml
src/mycobot_ros2/mycobot_description/launch/: display.launch.py  robot_state_publisher.launch.py
src/mycobot_ros2/mycobot_description/urdf/control/: gazebo_sim_ros2_control.urdf.xacro  mycobot_280_ros2_control.urdf.xacro
src/mycobot_ros2/mycobot_description/urdf/robots/: mycobot_280.urdf.xacro  mycobot_280_moveit.urdf.xacro
src/mycobot_ros2/mycobot_gazebo/: CMakeLists.txt  package.xml
src/mycobot_ros2/mycobot_gazebo/config/: ros_gz_bridge.yaml
src/mycobot_ros2/mycobot_gazebo/launch/: mycobot.gazebo.launch.py
src/mycobot_ros2/mycobot_gazebo/worlds/: empty.world
src/mycobot_ros2/mycobot_moveit_config/: package.xml
src/mycobot_ros2/mycobot_moveit_config/config/: ompl_planning.yaml  pilz_industrial_motion_planner_planning.yaml
src/mycobot_ros2/mycobot_moveit_config/config/mycobot_280/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  mycobot_280.srdf  pilz_cartesian_limits.yaml  prevsrdf  ros2_controllers.yaml
src/mycobot_ros2/mycobot_moveit_config/launch/: load_ros2_controllers.launch.py  move_gro.launch.py  move_group.launch.py
src/mycobot_ros2/mycobot_moveit_config/rviz/: move_group.rviz
